--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,26 @@
     <string name="batch_upload">batch</string>
     <string name="trigger_callback">callback</string>
     <string name="image_persist">image persist</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Settings</string>
+    <string name="sync_header">售卡设备</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title2">Sync email periodically2</string>
+    <string name="attachment_title2">Download incoming attachments2</string>
+    <string name="attachment_summary_on2">Automatically download attachments for incoming emails2</string>
+    <string name="attachment_summary_off2">Only download attachments when manually requested2</string>
 
 </resources>
